[package]
name = "mqtt-to-dawarich"
version = "0.2.1"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
openssl = { version = "0.10.68", features = ["vendored"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
rumqttc = "0.24.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
